--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
-"scripts": {
-  "serve": "vue-cli-service serve",
-  "build": "vue-cli-service build"
+{
+  "name": "your-project-name",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "serve tags.vue",
+    "build": "vue-cli-service build"
+  },
+  "dependencies": {
+    "vue": "^2.6.14"
+  },
+  "devDependencies": {
+    "@vue/cli-service": "^4.5.15",
+    "vue-template-compiler": "^2.6.14"
+  }
 }
