--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "tags",
   "version": "1.0.0",
   "scripts": {
-    "build": "echo 'No build necessary'"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
+  },
+  "dependencies": {
+    "vue": "^2.6.14"
+  },
+  "devDependencies": {
+    "@vue/cli-service": "^4.5.15",
+    "vue-template-compiler": "^2.6.14"
   }
 }
